# madlib-cli

./: README.md  pyproject.toml
assets/: sample.txt  target.txt
madlib_cli/: madlib.py
tests/: test_madlib.py
