[tool.poetry]
name = "madlib-cli"
version = "0.1.0"
description = ""
authors = ["vorSherer <tcpma2011@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-watch = "^4.2.0"
pytest = "^5.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
